Reproduced bongiome status
Signed-off-by: Paolo F Bongiovanni <paolo.bongiovanni@mindiply.com>

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -44,7 +44,7 @@
 
 [navigation]
     anchor = true
-    logo = "/img/logo_icon.svg"
+    logo = "/img/home_icon.svg"
     color = "body"
     fixed = true
     offset = "5.5rem"
@@ -168,7 +168,7 @@
     #label = "comment"
     # By default, light and dark mode correspond to github-light and github-dark, respectively.
     # Optional values: github-light, github-dark, preferred-color-scheme, github-dark-orange, icy-dark, dark-blue, photon-dark.
-    #theme = "" 
+    #theme = ""
 
 [links]
     hinode = "https://gethinode.com"
