--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm run -s mod:vendor",
-    "start": "hugo server --bind=0.0.0.0 --disableFastRender --printI18nWarnings",
+    "start": "hugo server --bind=0.0.0.0 --port=1314 --disableFastRender --printI18nWarnings",
     "start:prod": "npm run -s prestart  && hugo server --bind=0.0.0.0 --disableFastRender --printI18nWarnings -e production",
     "prebuild": "npm run clean:public && npm run -s mod:vendor",
     "build": "hugo --gc --minify",
