--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
-title = "Hinode"
-copyright = "Copyright © 2023 Mark Dumay."
+title = "Bongio's blog"
+copyright = "Copyright © 2023 Paolo Ferdinando Bongiovanni."
 paginate = 9
 enableGitInfo = true
 
@@ -17,7 +17,7 @@ ignoreErrors = ["error-remote-getjson"]
 
 timeout = "180s"
 
-languageCode = "en-us"
+languageCode = "en-gb"
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 
@@ -35,7 +35,7 @@ home = ["HTML", "RSS", "REDIR"]
 
 [build]
   writeStats = true
-  
+
 [taxonomies]
   tag = 'tags'
 
