--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -1,7 +1,13 @@
 [[main]]
-  name = "Home"
-  pageRef = "/"
-  weight = 10
+  name="Blog"
+  pageRef="/blog/"
+  weight=10
+
+[[main]]
+  name="About"
+  pageRef="/about_me"
+  weight=10
+
 
 [[main]]
   name = "Tags"
@@ -11,41 +17,11 @@
 [[social]]
   name = "LinkedIn"
   pre = "fab linkedin"
-  url = "https://linkedin.com/"
+  url = "https://www.linkedin.com/in/paolo-f-bongiovanni/"
   weight = 10
 
 [[social]]
-  name = "GitHub"
-  pre = "fab fa-github"
-  url = "https://github.com/"
-  weight = 20
-
-[[social]]
-  name = "Medium"
-  pre = "fab medium"
-  url = "https://medium.com/"
-  weight = 30
-
-# toml-docs-start sample-navigation
-[[sample]]
-  name = "Blog"
-  pageRef = "/blog/"
+  name = "X"
+  pre = "fab twitter"
+  url = "https://twitter.com/ilbongione"
   weight = 10
-
-[[sample]]
-  name = "Projects"
-  pageRef = "/projects/"
-  weight = 20
-
-[[sample]]
-  name = "Sample project"
-  pageRef = "/projects/sample-project/"
-  parent = "Projects"
-  weight = 1
-
-[[sample]]
-  name = "Another project"
-  pageRef = "/projects/another-project/"
-  parent = "Projects"
-  weight = 2
-# toml-docs-end sample-navigation
