Copyright and grammarlied on 2 blog articles
Signed-off-by: Paolo F Bongiovanni <paolo.bongiovanni@mindiply.com>

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 title = "Bongio's blog"
-copyright = "Copyright © 2023 Paolo Ferdinando Bongiovanni."
+copyright = "Copyright © 2023 - 2024 Paolo Ferdinando Bongiovanni."
 paginate = 9
 enableGitInfo = true
 
