Fixes sitemap with baseUrl change went live
Signed-off-by: Paolo F Bongiovanni <paolo.bongiovanni@mindiply.com>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:cache": "npm run -s prebuild && hugo config | grep cachedir && hugo --gc --minify -e ci",
     "build:debug": "hugo -e debug --debug",
     "build:preview": "npm run build -D -F",
-    "clean:public": "rimraf public",
+    "clean:public": "del public/**/* '!public/.git**/*'",
     "clean:install": "rimraf package-lock.json node_modules",
     "lint": "npm-run-all lint:**",
     "lint:scripts": "eslint assets/js --no-error-on-unmatched-pattern",
@@ -44,6 +44,7 @@
     "@gethinode/netlify-plugin-dartsass": "^0.2.0",
     "@netlify/plugin-lighthouse": "^6.0.0",
     "autoprefixer": "^10.4.17",
+    "del-cli": "^5.1.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
