--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "npm run -s prestart  && hugo server --bind=0.0.0.0 --disableFastRender --printI18nWarnings -e production",
     "prebuild": "npm run clean:public && npm run -s mod:vendor",
     "build": "hugo --gc --minify",
-    "buid:digital-ocean": "npm install --production=false && npm run build",
+    "buid:digital-ocean": "npm install --force --production=false && npm run build",
     "build:cache": "npm run -s prebuild && hugo config | grep cachedir && hugo --gc --minify -e ci",
     "build:debug": "hugo -e debug --debug",
     "build:preview": "npm run build -D -F",
